@@ -11,26 +11,10 @@
     <name>Serenity LambdaTest Integration</name>
 
     <properties>
-        <java.version>1.8</java.version>
-        <java.source.version>${java.version}</java.source.version>
-        <java.target.version>${java.version}</java.target.version>
-        <maven.version>3.5.3</maven.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>2.0.48</serenity.version>
-        <serenity.maven.version>2.0.67</serenity.maven.version>
-        <serenity.cucumber.version>1.9.37</serenity.cucumber.version>
-
-        <maven.failsafe-plugin.version>3.0.0-M3</maven.failsafe-plugin.version>
-        <maven.surefire-plugin.version>3.0.0-M3</maven.surefire-plugin.version>
-        <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
-        <maven.compiler-plugin.version>3.8.0</maven.compiler-plugin.version>
-
-        <jetty-io.version>10.0.2</jetty-io.version>
-        <jetty-util.version>10.0.2</jetty-util.version>
-
+        <serenity.version>2.0.40</serenity.version>
+        <serenity.cucumber.version>1.9.31</serenity.cucumber.version>
+        <lambdatest.tunnel.version>1.0.13</lambdatest.tunnel.version>
     </properties>
 
     <repositories>
@@ -50,22 +34,22 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-io</artifactId>
-            <version>${jetty-io.version}</version>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-util</artifactId>
-            <version>${jetty-util.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-core</artifactId>
             <version>${serenity.version}</version>
         </dependency>
+       <!-- https://mvnrepository.com/artifact/com.github.lambdatest/lambdatest-tunnel-binary -->
+<dependency>
+    <groupId>com.github.lambdatest</groupId>
+    <artifactId>lambdatest-tunnel-binary</artifactId>
+    <version>${lambdatest.tunnel.version}</version>
+</dependency>
+
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-junit</artifactId>
@@ -82,58 +66,24 @@
             <version>${serenity.cucumber.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>1.8.6</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>4.12</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.lambdaj</groupId>
-            <artifactId>lambdaj</artifactId>
-            <version>2.3.3</version>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.12.2</version>
+            <version>3.12.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>${maven-enforcer-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>enforce</id>
-                        <configuration>
-                            <rules>
-                                <requireUpperBoundDeps/>
-                            </rules>
-                        </configuration>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire-plugin.version}</version>
+                <version>2.18</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -141,15 +91,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler-plugin.version}</version>
+                <version>3.2</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven.failsafe-plugin.version}</version>
+                <version>2.18</version>
                 <configuration>
                     <includes>
                         <include>com/lambdatest/cucumber/SingleTest.java</include>
@@ -197,7 +147,7 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>${maven.failsafe-plugin.version}</version>
+                        <version>2.18</version>
                         <configuration>
                             <includes>
                                 <include>com/lambdatest/cucumber/SingleTest.java</include>
@@ -205,8 +155,31 @@
                             <reuseForks>true</reuseForks>
                             <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                             <systemPropertyVariables>
-                                <environment>single</environment>
-                                <taskID>MY_TEST_SCHEMA_${surefire.forkNumber}</taskID>
+                                <test_config>single.conf.json</test_config>
+                                <test_config_environment_index>index_1</test_config_environment_index>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>local</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.18</version>
+                        <configuration>
+                            <includes>
+                                <include>com/lambdatest/cucumber/LocalTest.java</include>
+                            </includes>
+                            <reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <systemPropertyVariables>
+                                <test_config>local.conf.json</test_config>
+                                <test_config_environment_index>index_1</test_config_environment_index>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
@@ -220,18 +193,19 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>${maven.failsafe-plugin.version}</version>
+                        <version>2.18</version>
                         <configuration>
                             <includes>
                                 <include>com/lambdatest/cucumber/Parallel*.java</include>
                             </includes>
                             <parallel>classes</parallel>
-                            <threadCount>10</threadCount>
-                            <forkCount>10</forkCount>
+                            <threadCount>4</threadCount>
+                            <forkCount>4</forkCount>
                             <reuseForks>true</reuseForks>
                             <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                             <systemPropertyVariables>
-                                <environment>parallel_${surefire.forkNumber}</environment>
+                                <test_config>parallel.conf.json</test_config>
+                                <test_config_environment_index>index_${surefire.forkNumber}</test_config_environment_index>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
